# agentfield

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  VERSION
.github/: BRANCH_PROTECTION.md
.github/workflows/: control-plane.yml  docker.yml  release.yml  sdk-python.yml
control-plane/: .env.dev  .env.example  README.md  build-single-binary.sh  go.mod  go.sum
control-plane/config/: brain.yaml  docker-perf.yaml
control-plane/migrations/: 000_migration_runner.sql  001_create_did_registry.sql  002_create_agent_dids.sql  003_create_component_dids.sql  005_create_workflow_vcs.sql  006_add_composite_indexes.sql  007_workflow_execution_indexes.sql  008_fix_brain_server_id_schema.sql  009_add_notes_to_workflow_executions.sql  010_workflow_execution_composite_indexes.sql  README.md
control-plane/scripts/: README.md  quick-mcp-test.sh  release.sh  test-mcp-endpoints.sh  version-manager.sh
deployments/docker/: Dockerfile.control-plane  Dockerfile.go-agent  Dockerfile.python-agent  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  RELEASE.md  RELEASING.md  SECURITY.md
scripts/: install.sh  test-all.sh
sdk/go/: README.md  go.mod
sdk/go/ai/: README.md  (+3 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
sdk/python/agentfield/: __init__.py  agent.py  rate_limiter.py  types.py
sdk/python/agentfield/harness/: _cli.py
sdk/python/agentfield/harness/providers/: codex.py  gemini.py
sdk/python/brain_sdk/: README_stdio_bridge.md  __init__.py  agent.py  agent_workflow.py  async_execution_manager.py  client.py  decorators.py  execution_context.py  execution_state.py  types.py
sdk/python/tests/: __init__.py  conftest.py  helpers.py  test_agent_ai.py  test_agent_brain.py  test_agent_call.py  test_agent_core.py  test_agent_helpers.py  test_agent_integration.py  test_agent_networking.py  test_agent_registry.py  test_agent_server.py  test_agent_utils.py  test_agent_workflow.py  test_agent_workflow_registration.py  test_ai_config.py  test_async_config.py  test_async_execution_manager_paths.py  test_client.py  test_client_lifecycle.py  test_client_unit.py  test_connection_manager.py  test_decorators.py  test_did_manager.py  test_dynamic_skills.py  test_execution_context_core.py  test_execution_state.py  test_harness_cost_estimation.py  test_harness_provider_codex.py  test_harness_provider_gemini.py  test_harness_runner.py  test_memory_client_core.py  test_memory_events.py  test_memory_flow_core.py  test_multimodal.py  test_multimodal_response.py  test_pydantic_utils.py  test_rate_limiter_core.py  test_result_cache.py  test_router.py  (+5 more)
sdk/python/tests/integration/: conftest.py  test_brain_end_to_end.py
(+343 files in other folders)
